--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -20,7 +20,6 @@
     </div>
   </div>
 
-  <script src="js/index.js"></script>
-  <script src="http://localhost:35729/livereload.js"></script>
+  <script src="js/index2.js"></script>
 </body>
 </html>
