--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -37,9 +37,9 @@
         <main>
           <h1>Calculator</h1>
           <form class="form-inline">
-            <input id="first-input" class="form-control input-lg"/>
+            <input id="first-input" class="form-control input-lg" placeholder="0"/>
             <span class="symbol">+</span>
-            <input id="second-input" class="form-control input-lg"/>
+            <input id="second-input" class="form-control input-lg" placeholder="0"/>
             <span class="symbol">=</span>
             <span id="result">0</span>
             <br/><br/>
