simplicifations - use input type='number' - remove livereload tag - clear log with innerText = ''

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -37,9 +37,9 @@
         <main>
           <h1>Calculator</h1>
           <form class="form-inline">
-            <input id="first-input" class="form-control input-lg" placeholder="0"/>
+            <input id="first-input" type="number" class="form-control input-lg" placeholder="0"/>
             <span class="symbol">+</span>
-            <input id="second-input" class="form-control input-lg" placeholder="0"/>
+            <input id="second-input" type="number" class="form-control input-lg" placeholder="0"/>
             <span class="symbol">=</span>
             <span id="result">0</span>
             <br/><br/>
@@ -52,6 +52,5 @@
   </div>
 
   <script src="js/index.js"></script>
-  <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
